--- a/angularFrontend/package.json
+++ b/angularFrontend/package.json
@@ -16,6 +16,7 @@
     "angular-strap": "^2.3.1",
     "angular-ui-router": "^0.2.15",
     "bourbon": "^4.2.3",
+    "fullcalendar": "^2.3.1",
     "jquery": "^2.1.4",
     "materialize-css": "^0.96.1",
     "moment": "^2.10.3",
